--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   # You can override the port by exporting SERVER_PORT or passing -Dserver.port=....
   port: ${SERVER_PORT:8080}
+  # immediate - causes memory leaks, or graceful - uses close() stack
+  shutdown: ${SERVER_SHUTDOWN:graceful}
 
 logging:
   level:
@@ -21,3 +23,12 @@ retry:
   initialInterval: ${RETRY_INITIAL_INTERVAL:1000}
   multiplier: ${RETRY_MULTIPLIER:2.0}
   maxInterval: ${RETRY_MAX_INTERVAL:30000}
+
+management:
+  server:
+    port: 8080
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
